<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.sportfashionstore.viewmodel.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_fragment_register">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.2"
            android:scaleType="fitXY"
            android:src="@drawable/bg_register" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/fs_pf_beau_sans_pro_bold"
                android:text="@string/tv_title_sign_up"
                android:textColor="@color/ocean_blue"
                android:textSize="26sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_email"
                style="@style/style_edit_text"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_email"
                android:maxLines="1"
                android:text="@={viewModel.email}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_error_email"
                style="@style/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="2dp"
                android:text="Email không hợp lệ"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_password"
                style="@style/style_edit_text"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={viewModel.password}" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_error_pass"
                style="@style/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="2dp"
                android:text="Mật khẩu không hợp lệ"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_display_name"
                style="@style/style_edit_text"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_name"
                android:text="@={viewModel.displayName}"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_error_name"
                style="@style/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="2dp"
                android:text="Tên đăng nhập không được để trống hoặc quá ngắn"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_address"
                style="@style/style_edit_text"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_address"
                android:text="@={viewModel.address}"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_error_address"
                style="@style/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="2dp"
                android:text="Địa chỉ không được để trống"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_button"
                android:fontFamily="@font/sarabun_bold"
                android:text="@string/tv_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btn_change_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/common_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sarabun_medium"
                    android:text="@string/tv_have_an_account"
                    android:textColor="@color/model_black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/common_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/sarabun_bold"
                    android:text="@string/tv_sign_in"
                    android:textColor="@color/sailing_navy_blue"
                    android:textSize="16sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
