<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/fs_pf_beau_sans_pro_bold"
        android:text="Welcome back!"
        android:textColor="@color/ocean_blue"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_email"
        style="@style/style_edit_text"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_email"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_password"
        style="@style/style_edit_text"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/ic_visible_pass"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/sarabun_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:drawableStart="@drawable/custom_gray_line"
        android:drawableEnd="@drawable/custom_gray_line"
        android:fontFamily="@font/sarabun_semi_bold"
        android:gravity="center"
        android:text="@string/continue_with"
        android:textColor="@color/medium_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/btn_login_fb"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        app:layout_constraintEnd_toStartOf="@+id/guidelineCenter"
        android:background="@drawable/bg_login_fb"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/facebook_logo"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_login_google"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        app:layout_constraintStart_toEndOf="@+id/guidelineCenter"
        android:background="@drawable/bg_login_google"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/logo_googleg"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>